--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -5204,7 +5204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 237,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5220,7 +5220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 226,
+   "execution_count": 238,
    "metadata": {},
    "outputs": [
     {
@@ -5249,7 +5249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 227,
+   "execution_count": 239,
    "metadata": {},
    "outputs": [
     {
@@ -5336,7 +5336,7 @@
        "3  cliente_4    M     35     6500"
       ]
      },
-     "execution_count": 227,
+     "execution_count": 239,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5349,17 +5349,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 240,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>10000.0</td>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27.0</td>\n",
+       "      <td>5000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_6</td>\n",
+       "      <td>F</td>\n",
+       "      <td>50.0</td>\n",
+       "      <td>17500.0</td>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30.0</td>\n",
+       "      <td>7000.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>2700.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>6500.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID SEXO  IDADE  SALARIO         ID SEXO  IDADE  SALARIO         ID  \\\n",
+       "0  cliente_5    M   40.0  10000.0  cliente_1    M   27.0   5000.0        NaN   \n",
+       "1  cliente_6    F   50.0  17500.0  cliente_2    F   30.0   7000.0        NaN   \n",
+       "2        NaN  NaN    NaN      NaN        NaN  NaN    NaN      NaN  cliente_3   \n",
+       "3        NaN  NaN    NaN      NaN        NaN  NaN    NaN      NaN  cliente_4   \n",
+       "\n",
+       "  SEXO  IDADE  SALARIO  \n",
+       "0  NaN    NaN      NaN  \n",
+       "1  NaN    NaN      NaN  \n",
+       "2    F   24.0   2700.0  \n",
+       "3    M   35.0   6500.0  "
+      ]
+     },
+     "execution_count": 240,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "df_concat = pd.concat([df_temp, df5, df6], axis=1)\n",
-    "df_concat"
+    "# concatena as tabelas sem se guiar pelo indice\n",
+    "pd.concat([df_temp, df5, df6], axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 241,
    "metadata": {},
    "outputs": [
     {
@@ -5368,28 +5487,30 @@
        "[5, 6, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 228,
+     "execution_count": 241,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# acertando o indice da tabela\n",
     "list_index = [int(value.split('_')[1]) for value in list(df_concat['ID'])]\n",
-    "list_index\n"
+    "list_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 229,
+   "execution_count": 242,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# criando a coluna indice\n",
     "df_concat['index_column'] = list_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 243,
    "metadata": {},
    "outputs": [
     {
@@ -5484,19 +5605,20 @@
        "4             cliente_4    M     35     6500"
       ]
      },
-     "execution_count": 230,
+     "execution_count": 243,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# setando a coluna criada como indice da tabela\n",
     "df_concat = df_concat.set_index('index_column')\n",
     "df_concat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 231,
+   "execution_count": 244,
    "metadata": {},
    "outputs": [
     {
@@ -5591,12 +5713,13 @@
        "6             cliente_6    F     50    17500"
       ]
      },
-     "execution_count": 231,
+     "execution_count": 244,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# ordenando tabela pela coluna indice\n",
     "df_concat.sort_index()"
    ]
   },
