--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -5204,7 +5204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 237,
+   "execution_count": 248,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5220,7 +5220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 238,
+   "execution_count": 249,
    "metadata": {},
    "outputs": [
     {
@@ -5249,7 +5249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 239,
+   "execution_count": 250,
    "metadata": {},
    "outputs": [
     {
@@ -5336,7 +5336,7 @@
        "3  cliente_4    M     35     6500"
       ]
      },
-     "execution_count": 239,
+     "execution_count": 250,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5349,7 +5349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 240,
+   "execution_count": 251,
    "metadata": {},
    "outputs": [
     {
@@ -5466,7 +5466,7 @@
        "3    M   35.0   6500.0  "
       ]
      },
-     "execution_count": 240,
+     "execution_count": 251,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5478,7 +5478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 241,
+   "execution_count": 252,
    "metadata": {},
    "outputs": [
     {
@@ -5487,7 +5487,7 @@
        "[5, 6, 1, 2, 3, 4]"
       ]
      },
-     "execution_count": 241,
+     "execution_count": 252,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5500,17 +5500,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 242,
+   "execution_count": 253,
    "metadata": {},
    "outputs": [],
    "source": [
     "# criando a coluna indice\n",
-    "df_concat['index_column'] = list_index"
+    "df_concat['INDEX'] = list_index"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 243,
+   "execution_count": 254,
    "metadata": {},
    "outputs": [
     {
@@ -5540,7 +5540,7 @@
        "      <th>SALARIO</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>index_column</th>\n",
+       "      <th>INDEX</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -5595,30 +5595,30 @@
        "</div>"
       ],
       "text/plain": [
-       "                     ID SEXO  IDADE  SALARIO\n",
-       "index_column                                \n",
-       "5             cliente_5    M     40    10000\n",
-       "6             cliente_6    F     50    17500\n",
-       "1             cliente_1    M     27     5000\n",
-       "2             cliente_2    F     30     7000\n",
-       "3             cliente_3    F     24     2700\n",
-       "4             cliente_4    M     35     6500"
+       "              ID SEXO  IDADE  SALARIO\n",
+       "INDEX                                \n",
+       "5      cliente_5    M     40    10000\n",
+       "6      cliente_6    F     50    17500\n",
+       "1      cliente_1    M     27     5000\n",
+       "2      cliente_2    F     30     7000\n",
+       "3      cliente_3    F     24     2700\n",
+       "4      cliente_4    M     35     6500"
       ]
      },
-     "execution_count": 243,
+     "execution_count": 254,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# setando a coluna criada como indice da tabela\n",
-    "df_concat = df_concat.set_index('index_column')\n",
+    "df_concat = df_concat.set_index('INDEX')\n",
     "df_concat"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 255,
    "metadata": {},
    "outputs": [
     {
@@ -5648,7 +5648,7 @@
        "      <th>SALARIO</th>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>index_column</th>\n",
+       "      <th>INDEX</th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
        "      <th></th>\n",
@@ -5703,17 +5703,17 @@
        "</div>"
       ],
       "text/plain": [
-       "                     ID SEXO  IDADE  SALARIO\n",
-       "index_column                                \n",
-       "1             cliente_1    M     27     5000\n",
-       "2             cliente_2    F     30     7000\n",
-       "3             cliente_3    F     24     2700\n",
-       "4             cliente_4    M     35     6500\n",
-       "5             cliente_5    M     40    10000\n",
-       "6             cliente_6    F     50    17500"
+       "              ID SEXO  IDADE  SALARIO\n",
+       "INDEX                                \n",
+       "1      cliente_1    M     27     5000\n",
+       "2      cliente_2    F     30     7000\n",
+       "3      cliente_3    F     24     2700\n",
+       "4      cliente_4    M     35     6500\n",
+       "5      cliente_5    M     40    10000\n",
+       "6      cliente_6    F     50    17500"
       ]
      },
-     "execution_count": 244,
+     "execution_count": 255,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5721,6 +5721,112 @@
    "source": [
     "# ordenando tabela pela coluna indice\n",
     "df_concat.sort_index()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 257,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>INDEX</th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>5</td>\n",
+       "      <td>cliente_5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6</td>\n",
+       "      <td>cliente_6</td>\n",
+       "      <td>F</td>\n",
+       "      <td>50</td>\n",
+       "      <td>17500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2</td>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>3</td>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>4</td>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   INDEX         ID SEXO  IDADE  SALARIO\n",
+       "0      5  cliente_5    M     40    10000\n",
+       "1      6  cliente_6    F     50    17500\n",
+       "2      1  cliente_1    M     27     5000\n",
+       "3      2  cliente_2    F     30     7000\n",
+       "4      3  cliente_3    F     24     2700\n",
+       "5      4  cliente_4    M     35     6500"
+      ]
+     },
+     "execution_count": 257,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# resentand a coluna indice para voltar a ordem anterior\n",
+    "df_concat.reset_index()"
    ]
   },
   {
