--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -5905,10 +5905,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 366,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/wh/_2xtz5kd2knd10y0m8tmqhrc0000gp/T/ipykernel_17759/1452332487.py:4: FutureWarning: The frame.append method is deprecated and will be removed from pandas in a future version. Use pandas.concat instead.\n",
+      "  df_append = df_1.append([df_2, df_3])\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>SEXO</th>\n",
+       "      <th>IDADE</th>\n",
+       "      <th>SALARIO</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_1</td>\n",
+       "      <td>M</td>\n",
+       "      <td>27</td>\n",
+       "      <td>5000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_2</td>\n",
+       "      <td>F</td>\n",
+       "      <td>30</td>\n",
+       "      <td>7000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_3</td>\n",
+       "      <td>F</td>\n",
+       "      <td>24</td>\n",
+       "      <td>2700</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_4</td>\n",
+       "      <td>M</td>\n",
+       "      <td>35</td>\n",
+       "      <td>6500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>cliente_5</td>\n",
+       "      <td>M</td>\n",
+       "      <td>40</td>\n",
+       "      <td>10000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>cliente_6</td>\n",
+       "      <td>F</td>\n",
+       "      <td>50</td>\n",
+       "      <td>17500</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          ID SEXO  IDADE  SALARIO\n",
+       "0  cliente_1    M     27     5000\n",
+       "1  cliente_2    F     30     7000\n",
+       "0  cliente_3    F     24     2700\n",
+       "1  cliente_4    M     35     6500\n",
+       "0  cliente_5    M     40    10000\n",
+       "1  cliente_6    F     50    17500"
+      ]
+     },
+     "execution_count": 366,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# aplicando append, é um método mais prático de chamar o pd.concat\n",
+    "# sem a necessidade de passar o eixo\n",
+    "\n",
+    "df_append = df_1.append([df_2, df_3])\n",
+    "df_append"
+   ]
   }
  ],
  "metadata": {
