--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios_2.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_exercicios_2.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
@@ -283,7 +283,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -437,7 +437,7 @@
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>...</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
        "      <td>False</td>\n",
@@ -664,7 +664,7 @@
        "ID               ...                                                       \n",
        "5001718   False  ...   False   False   False  False  False  False  False   \n",
        "5001719   False  ...   False   False   False  False  False  False  False   \n",
-       "5001720   False  ...    True   False   False  False  False  False  False   \n",
+       "5001720   False  ...   False   False   False  False  False  False  False   \n",
        "5001723   False  ...   False   False   False  False  False  False  False   \n",
        "5001726   False  ...   False   False   False  False  False  False  False   \n",
        "...         ...  ...     ...     ...     ...    ...    ...    ...    ...   \n",
@@ -691,30 +691,30 @@
        "[20937 rows x 25 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_default = pg.isin(['1', '2', '3', '4', '5'])\n",
+    "df_default = pg.isin(['2', '3', '4', '5'])\n",
     "df_default"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False    17989\n",
-       "True      2948\n",
+       "False    20506\n",
+       "True       431\n",
        "Name: DEFAULT, dtype: int64"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -727,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
@@ -736,7 +736,7 @@
        "(20937, 26)"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -747,7 +747,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -789,7 +789,7 @@
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>5001720</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -809,12 +809,12 @@
        "        ID  DEFAULT\n",
        "0  5001718    False\n",
        "1  5001719    False\n",
-       "2  5001720     True\n",
+       "2  5001720    False\n",
        "3  5001723    False\n",
        "4  5001726    False"
       ]
      },
-     "execution_count": 101,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -827,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -937,7 +937,7 @@
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>True</td>\n",
+       "      <td>False</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -1176,7 +1176,7 @@
        "       CNT_FAM_MEMBERS  DEFAULT  \n",
        "0                  NaN    False  \n",
        "1                  NaN    False  \n",
-       "2                  NaN     True  \n",
+       "2                  NaN    False  \n",
        "3                  NaN    False  \n",
        "4                  NaN    False  \n",
        "...                ...      ...  \n",
@@ -1189,7 +1189,7 @@
        "[20937 rows x 19 columns]"
       ]
      },
-     "execution_count": 107,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1202,7 +1202,343 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>DEFAULT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8493</th>\n",
+       "      <td>5052776</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>5005351</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7289</th>\n",
+       "      <td>5044814</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20338</th>\n",
+       "      <td>5148614</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1054</th>\n",
+       "      <td>5004587</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>5002637</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10463</th>\n",
+       "      <td>5065333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16939</th>\n",
+       "      <td>5118287</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>5002988</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19750</th>\n",
+       "      <td>5142979</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12558</th>\n",
+       "      <td>5088943</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1301</th>\n",
+       "      <td>5005357</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10680</th>\n",
+       "      <td>5066518</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16107</th>\n",
+       "      <td>5115972</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17516</th>\n",
+       "      <td>5121226</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18104</th>\n",
+       "      <td>5125622</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8529</th>\n",
+       "      <td>5052900</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11698</th>\n",
+       "      <td>5069506</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8572</th>\n",
+       "      <td>5053021</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>5002760</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ID  DEFAULT\n",
+       "8493   5052776    False\n",
+       "1296   5005351    False\n",
+       "7289   5044814    False\n",
+       "20338  5148614    False\n",
+       "1054   5004587    False\n",
+       "300    5002637    False\n",
+       "10463  5065333    False\n",
+       "16939  5118287    False\n",
+       "438    5002988    False\n",
+       "19750  5142979    False\n",
+       "12558  5088943    False\n",
+       "1301   5005357    False\n",
+       "10680  5066518    False\n",
+       "16107  5115972    False\n",
+       "17516  5121226    False\n",
+       "18104  5125622    False\n",
+       "8529   5052900    False\n",
+       "11698  5069506    False\n",
+       "8572   5053021    False\n",
+       "343    5002760    False"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_clean_default.sample(20, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>ID</th>\n",
+       "      <th>DEFAULT</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>8493</th>\n",
+       "      <td>5052776</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1296</th>\n",
+       "      <td>5005351</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7289</th>\n",
+       "      <td>5044814</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20338</th>\n",
+       "      <td>5148614</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1054</th>\n",
+       "      <td>5004587</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>300</th>\n",
+       "      <td>5002637</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10463</th>\n",
+       "      <td>5065333</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16939</th>\n",
+       "      <td>5118287</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>438</th>\n",
+       "      <td>5002988</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19750</th>\n",
+       "      <td>5142979</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12558</th>\n",
+       "      <td>5088943</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1301</th>\n",
+       "      <td>5005357</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10680</th>\n",
+       "      <td>5066518</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16107</th>\n",
+       "      <td>5115972</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17516</th>\n",
+       "      <td>5121226</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18104</th>\n",
+       "      <td>5125622</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8529</th>\n",
+       "      <td>5052900</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11698</th>\n",
+       "      <td>5069506</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8572</th>\n",
+       "      <td>5053021</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>343</th>\n",
+       "      <td>5002760</td>\n",
+       "      <td>False</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            ID  DEFAULT\n",
+       "8493   5052776    False\n",
+       "1296   5005351    False\n",
+       "7289   5044814    False\n",
+       "20338  5148614    False\n",
+       "1054   5004587    False\n",
+       "300    5002637    False\n",
+       "10463  5065333    False\n",
+       "16939  5118287    False\n",
+       "438    5002988    False\n",
+       "19750  5142979    False\n",
+       "12558  5088943    False\n",
+       "1301   5005357    False\n",
+       "10680  5066518    False\n",
+       "16107  5115972    False\n",
+       "17516  5121226    False\n",
+       "18104  5125622    False\n",
+       "8529   5052900    False\n",
+       "11698  5069506    False\n",
+       "8572   5053021    False\n",
+       "343    5002760    False"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_merge[['ID', 'DEFAULT']].sample(20, random_state=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -1211,7 +1547,7 @@
        "(20937, 19)"
       ]
      },
-     "execution_count": 108,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1222,18 +1558,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "False    17989\n",
-       "True      2948\n",
+       "False    20506\n",
+       "True       431\n",
        "Name: DEFAULT, dtype: int64"
       ]
      },
-     "execution_count": 111,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
