--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -121,7 +121,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='08c626f1-85ad-41d7-a06b-164e812bcacb'></div>"
+       "<div id='ab8925b4-713e-4d77-ba3b-deafa29981a0'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -133,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x114bab460>]"
+       "[<matplotlib.lines.Line2D at 0x1221ab3d0>]"
       ]
      },
      "execution_count": 2,
@@ -165,7 +165,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='142bc93e-f8ae-4f4d-a89c-fb226c3a1c5f'></div>"
+       "<div id='e64586cd-fb4f-46cd-a009-5252f63d5129'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -210,7 +210,7 @@
     {
      "data": {
       "text/html": [
-       "<div id='62b0bfc3-e385-4188-98cb-f3996428b9c5'></div>"
+       "<div id='c55909e0-7f07-4681-bd3a-9ebcdbb7688c'></div>"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
@@ -222,7 +222,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x114d240a0>]"
+       "[<matplotlib.lines.Line2D at 0x122314040>]"
       ]
      },
      "execution_count": 5,
@@ -247,7 +247,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -263,7 +263,6 @@
    "pygments_lexer": "ipython3",
    "version": "3.10.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
