--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -5374,7 +5374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 31,
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -5385,7 +5385,7 @@
      "data": {
       "text/plain": "Text(0.5, 22.50086015740236, 'Período')"
      },
-     "execution_count": 29,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -6473,6 +6473,30 @@
     "font_options = {'family': 'monospace', 'weight': 'bold', 'size': 'small'}\n",
     "plt.rc('font', **font_options)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 6.3 Gráficos básicos"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
   }
  ],
  "metadata": {
