--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_5_limpeza_e_preparacao_de_dados.ipynb
@@ -6018,7 +6018,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.5 64-bit",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -6032,9 +6032,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.12"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
