--- a/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
+++ b/EBAC Curso Ciência de Dados/Cientista de Dados/modulo_6_descritiva_I.ipynb
@@ -7473,6 +7473,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### test"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
